--- a/YII2 com o CRUD/basic/composer.json
+++ b/YII2 com o CRUD/basic/composer.json
@@ -18,7 +18,10 @@
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "kartik-v/yii2-mpdf": "*"
+        "yiisoft/yii2-jui": "^2.0",
+        "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-export": "@dev"
+       
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
